<resources>
    <string name="app_name">FastBooking</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="email">Email</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log out</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="book">Book</string>
    <string name="reviews">Reviews</string>
    <string name="leave_review">Please leave your review</string>
    <string name="home_text">Welcome \nPlease choose table number and free time than we can continue.</string>
    <string name="guests_number">Number Of Guests</string>
    <string name="special_requests">Special Requests</string>
    <string name="select_time">Select time</string>
    <string name="leave_review_btn">Leave/Edit review</string>
    <string name="tables">Tables</string>
    <string name="orders">Orders</string>
    <string name="number_of_chairs">Number Of Chairs</string>
    <string name="add_table">Add/edit table</string>
    <string name="delete">Delete</string>
    <string name="coupe">Coupe</string>
    <string name="table_number">Table Number</string>
</resources>