<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fastbooking.ui.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_book"
        android:name="com.example.fastbooking.ui.BookFragment"
        android:label="@string/book"
        tools:layout="@layout/fragment_book" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.fastbooking.ui.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.fastbooking.ui.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" />

</navigation>